updates for scripts page

--- a/scripts.html
+++ b/scripts.html
@@ -16,10 +16,10 @@
 <body>
 
 <div id=roomSelection>
-	<div class='blogContainer'><a href="scriptblog/Missile.cs" ><img src="images/mathgame.png" alt="" /></a>
+	<div class='blogContainer'><a href="scriptblog/Missile.cs" ><img src="images/missile.png" alt="" /></a>
 	<div class='content'>
-	<h2>Missle in unity</h2>
-	<p>Missle I made during my unity development course.</p>
+	<h2>Missiles in unity</h2>
+	<p>Homing missle script I made during my unity development course.</p>
 	<a href="scriptblog/Missile.cs">Download the Unity script</a>
 
 	</div>
