--- a/scripts.html
+++ b/scripts.html
@@ -9,7 +9,7 @@
       	</head>
 
 <header id="header">
-	<h1>Scripts for unity</h1>
+	<h1>Scripts for Unity</h1>
 
 </header>
 
@@ -19,7 +19,7 @@
 	<div class='blogContainer'><a href="scriptblog/Missile.cs" ><img src="images/missile.png" alt="" /></a>
 	<div class='content'>
 	<h2>Missiles in unity</h2>
-	<p>Homing missle script I made during my unity development course.</p>
+	<p>Homing missile script I made during my unity development course.</p>
 	<a href="scriptblog/Missile.cs">Download the Unity script</a>
 
 	</div>
