--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
    <header id="header">
-      <h1>Digital portfolio</h1>
+      <h1>Digital Portfolio</h1>
    </header>
 
    <div class="parent">
@@ -92,8 +92,8 @@
                <img src="images/jigsaw.png" alt="">
 			 </a>
                <div class="content">
-                  <h2>Jigsaw ransomware</h2>
-                  <p>My friend and I coauthored this paper. We set up a virtual machine and looked at how the Jigsaw ransomware worked using a controlled environment.</p>
+                  <h2>Jigsaw Ransomware</h2>
+                  <p>My friend and I analysed the Jigsaw Ransomware</p>
                </div>
 		</div>
 
@@ -103,7 +103,7 @@
 			   </a>
                <div class="content">
                   <h2>Advent of Cyber 1</h2>
-                  <p>This room covers cookies, How they are created and how to exploit them.</p>
+                  <p>This room covers exploiting cookies. </p>
                </div>
             
          </div>
@@ -116,7 +116,7 @@
 			 </a>
                <div class="content">
                   <h2>Advent of Cyber 2</h2>
-                  <p>This room covers the basics of infiltrating a website and launching an uploaded reverse shell.</p>
+                  <p>get into a website by launching a reverse shell.</p>
                </div>
             
          </div>
@@ -126,7 +126,7 @@
                <img src="CTF/kringlecon/kringlecon2021photo.png" alt="">
 			</a>
                <div class="content">
-                  <h2>Sans kringlecon 2021</h2>
+                  <h2>Sans Kringlecon 2021</h2>
                   <p>Help save Christmas from cyber attacks!</p>
                </div>
             </a>
