post upload TheHive

--- a/index.html
+++ b/index.html
@@ -65,6 +65,17 @@
 		
 		<br>
 		
+		<div class="blogContainer">
+            <a href="posts/The hive project/Thehiveproject.html">
+               <img src="posts/The hive project/images/image27.png" alt="">
+			   </a>
+               <div class="content">
+                  <h2>TheHive Project</h2>
+                  <p>Learn how to use TheHive Project Security Incident Response Platfrom.</p>
+               </div>
+            
+         </div>
+		
          <div class="blogContainer">
             <a href="CTF/Archtype/Archtype.html">
                <img src="CTF/images/Archetype.png" alt="">
