--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 			 </a>
                <div class="content">
                   <h2>Advent of Cyber 2</h2>
-                  <p>get into a website by launching a reverse shell.</p>
+                  <p>Get into a website by launching a reverse shell.</p>
                </div>
             
          </div>
