Upload new post

--- a/index.html
+++ b/index.html
@@ -60,10 +60,21 @@
       
 
       <!-- Blog Section -->
-	  <div class='blogBackground'><h1><strong>CTF and Tech Blog<strong></h2></div>
+	  <div class='blogBackground'><h1>CTF and Tech Blog</h2></div>
       <div class="blogBackground">
 		
 		<br>
+		
+		<div class="blogContainer">
+            <a href="posts/The hive project/OpenCTI.html">
+               <img src="posts/OpenCTI/images/image37.png" alt="">
+			   </a>
+               <div class="content">
+                  <h2>OpenCTI</h2>
+                  <p>Let's learn about OpenCTI the open source CTI Management tool</p>
+               </div>
+            
+         </div>
 		
 		<div class="blogContainer">
             <a href="posts/The hive project/Thehiveproject.html">
