link fix for new post

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		<br>
 		
 		<div class="blogContainer">
-            <a href="posts/The hive project/OpenCTI.html">
+            <a href="posts/OpenCTI/OpenCTI.html">
                <img src="posts/OpenCTI/images/image37.png" alt="">
 			   </a>
                <div class="content">
