--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       
 
       <!-- Blog Section -->
-	  <div class='blogBackground'><h1>CTF and Tech Blog</h2></div>
+	  <div  id='blogHeader'><h1>CTF and Tech Blog</h1></div>
       <div class="blogBackground">
 		
 		<br>
