added new posts and preparing for horizon worlds

--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
                <p>Projects done in Unity.</p>
             </div>
          </div>
+		 
+		 <!--
+         <div class="blogContainer">
+            <a href="horizon.html" class="image">
+               <img src="images/horizon.png" alt="">
+            </a>
+            <div class="content">
+               <h2>Horizon Worlds VR</h2>
+               <p>Projects and Scipts I have made in Horizon.</p>
+            </div>
+         </div>
+-->
 <!--
          <div class="blogContainer">
             <a href="posts/blender/" class="image">
@@ -65,6 +77,19 @@
 		
 		<br>
 		
+	
+		
+		<div class="blogContainer">
+            <a href="posts/MISP/MISP.html">
+               <img src="posts/MISP/images/image14.png" alt="">
+			   </a>
+               <div class="content">
+                  <h2>MISP</h2>
+                  <p>Learning about the MISP Platform</p>
+               </div>
+            
+         </div>
+		
 		<div class="blogContainer">
             <a href="posts/OpenCTI/OpenCTI.html">
                <img src="posts/OpenCTI/images/image37.png" alt="">
@@ -75,6 +100,7 @@
                </div>
             
          </div>
+		
 		
 		<div class="blogContainer">
             <a href="posts/The hive project/Thehiveproject.html">
